--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
-    "react-player": "^2.12.0"
+    "react-player": "^2.12.0",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "sass": "^1.63.4"
