--- a/package.json
+++ b/package.json
@@ -12,27 +12,32 @@
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
     "classnames": "^2.3.2",
-    "eslint-config-next": "13.4.6",
-    "next": "13.4.6",
+    "next": "^13.4.19",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.9.0",
     "react-player": "^2.12.0",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
-    "eslint": "^8.46.0",
-    "eslint-config-airbnb": "^19.0.4",
+    "@types/node": "^20.5.7",
+    "@types/react": "^18.2.21",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
+    "eslint": "^8.48.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-next": "^13.4.6",
     "eslint-config-prettier": "^8.9.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.0.0",
-    "sass": "^1.63.4"
+    "sass": "^1.63.4",
+    "typescript": "^5.2.2"
   }
 }
