--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.9.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-player": "^2.12.0",
     "react-transition-group": "^4.4.5"
   },
