--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
+    "@types/react-transition-group": "^4.4.10",
     "classnames": "^2.3.2",
     "next": "^14.0.3",
     "prop-types": "^15.8.1",
