--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
   "rules": {
     "prettier/prettier": "error",
     "indent": ["error", 2],
-    "quotes": ["error", "single"],
+    "quotes": ["error", "single", { "allowTemplateLiterals": true }],
     "semi": ["error", "always"],
     "no-unused-vars": "warn",
     "no-console": "off",
